improve blockquote layout and avoid mobile layout issue

--- a/src/styles/ironies.css
+++ b/src/styles/ironies.css
@@ -41,7 +41,7 @@
     blockquote {
         font-weight: bold;
         margin: 0 0 40px 0;
-        padding: 20px 20px 20px 10ch;
+        padding: 30px 40px 30px 60px;
         border-radius: 10px;
         position: relative;
 
