--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,7 +7,11 @@
 
 body {
   background: #000;
-  position: relative;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
   margin: 0;
   padding: 0;
   overflow: hidden;
